<resources>
    <string name="app_name">WorkoutBuddy</string>
    <!-- PlaceHolder for blank fragments -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MenuFragment Strings -->
    <string name="menu_text_welcome">Welcome to WorkoutBuddy</string>
    <string name="menu_button_startWorkout">Start Workout</string>
    <string name="menu_button_customizeWorkout">Customize Workout</string>
    <string name="menu_button_addExercise">Add Exercise</string>


    <!-- WorkoutFragment Strings -->
    <string name="workout_button_finishedWorkout">Finished Workout</string>

    <!-- ResultFragment Strings -->
    <string name="result_text_workoutComplete">Workout Complete!!!</string>
    <string name="result_button_mainMenu">Main Menu</string>

    <!-- ExerciseFragment Strings -->
    <string name="exercise_edit_hint_exercise">Enter Name Of Exercise</string>
    <string name="exercise_edit_hint_reps"># Reps</string>
    <string name="exercise_edit_hint_sets"># Sets</string>
    <string name="exercise_button_newExercise">Add Exercise</string>
    <string name="exercise_button_startWorkout">Main Menu</string>

    <!-- ViewExercisesFragment Strings -->
    <string name="viewExercises_button_startWorkout">Start Workout</string>
    <string name="viewExercises_button_addExercise">Add Exercise</string>
    <string name="viewExercises_button_clearAll">Clear All</string>

    <string name="viewExercises_button_mainMenu">Main Menu</string>

    <!-- WorkoutFragment Strings -->
    <string name="add_set">Set +</string>

    <!-- AboutFragment Strings -->
    <string name="about_text">This app was made by Anthony Lawlor, James Dimino, and Ryan Casebolt, for Professor Lin\'s Mobile App Programming I class at the University of Massachusetts Lowell. This app was created to promote a more enjoyable and accessible workout experience for all. Just add your favorite workouts and keep yourself accountable and results are guaranteed! \n Version 1.0</string>
    <string name="about_title">About</string>

    <!-- HelpFragment Strings -->
    <string name="help_text">To use WorkoutBuddy you need to add exercises to the app. After common exercises have been added you can navigate to the customize workout screen from the main menu where you can add what exercises you want to workout with. After you press start workout you can complete exercises as you workout and get progress on how many sets you have left with the progress bar located about each exercises. After you complete your workout a results screen will show you the total about of time spent on that workout.</string>
    <string name="help_title">Help</string>

    <!-- SettingFragment Strings -->
    <string-array name="settings_array">
        <item>Default</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
    </string-array>

    <string name="settings_title">Settings</string>
    <string name="settings_submit">Submit</string>
    <string name="settings_hint_name">Enter Name</string>
    <string name="settings_selectColorTheme">Select App Color Theme</string>
    <string name="settings_selectName">Select Username</string>


    <!-- Trying to create a key value pair array so we can reference the muscles by ID -->
    <string-array name="muscles_array">
        <item>Select Muscle Group</item>
        <item>Arms</item>
        <item>Back</item>
        <item>Legs</item>
        <item>Core</item>
    </string-array>

    <string-array name="muscles_array_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Menu Bottom Items -->
    <string name="menu_bottom_workout">Workout</string>
    <string name="menu_bottom_exercises">Exercises</string>
    <string name="menu_bottom_create">Create</string>
    <string name="menu_bottom_settings">Settings</string>
    <string name="menu_bottom_about">About</string>
    <string name="menu_bottom_help">Help</string>

</resources>