<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExercisesFragment">

    <Spinner
        android:id="@+id/exercise_spinner"
        android:layout_width="251dp"
        android:layout_height="51dp"
        android:entries="@array/muscles_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <EditText
        android:id="@+id/textExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_edit_hint_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/exercise_spinner"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/exercise_spinner"
        app:layout_constraintTop_toBottomOf="@+id/exercise_spinner"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/textReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/exercise_edit_hint_reps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textExercise"
        app:layout_constraintTop_toBottomOf="@+id/textExercise"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/textSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_marginEnd="108dp"
        android:hint="@string/exercise_edit_hint_sets"
        app:layout_constraintBottom_toBottomOf="@+id/textReps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textExercise"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="251dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toTopOf="@+id/exercise_spinner"
        app:layout_constraintEnd_toEndOf="@+id/exercise_spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/exercise_spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/addExerciseButton"
        android:layout_width="201dp"
        android:layout_height="44dp"
        android:text="@string/exercise_button_newExercise"
        android:backgroundTint="#0F89CF"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textSets"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/textReps"
        app:layout_constraintTop_toBottomOf="@+id/textExercise"
        app:layout_constraintVertical_bias="0.273" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="201dp"
        android:layout_height="44dp"
        android:text="@string/exercise_button_startWorkout"
        android:backgroundTint="#0F89CF"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textSets"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/textReps"
        app:layout_constraintTop_toBottomOf="@+id/addExerciseButton"
        app:layout_constraintVertical_bias="0.055" />

</androidx.constraintlayout.widget.ConstraintLayout>