<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <EditText
        android:id="@+id/settingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/settings_hint_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/settingColorSpinner"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="@+id/settingColorSpinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/colorSettingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_selectColorTheme"
        app:layout_constraintBottom_toTopOf="@+id/settingColorSpinner"
        app:layout_constraintEnd_toEndOf="@+id/settingColorSpinner"
        app:layout_constraintStart_toStartOf="@+id/settingColorSpinner"
        app:layout_constraintTop_toBottomOf="@+id/settingName" />

    <Spinner
        android:id="@+id/settingColorSpinner"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:entries="@array/settings_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingName" />

    <Button
        android:id="@+id/settingsSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/settings_submit"
        app:layout_constraintEnd_toEndOf="@+id/settingColorSpinner"
        app:layout_constraintStart_toStartOf="@+id/settingColorSpinner"
        app:layout_constraintTop_toBottomOf="@+id/settingColorSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>