<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutFragment">


    <ImageView
        android:id="@+id/imageBlink"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/button_startWorkout"
        android:layout_width="170sp"
        android:layout_height="50sp"
        android:backgroundTint="#0F89CF"
        android:text="@string/viewExercises_button_startWorkout"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/button_clearExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#80ff0000"
        android:text="@string/viewExercises_button_clearAll"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <Button
        android:id="@+id/button_addExercise"
        android:layout_width="170sp"
        android:layout_height="50sp"
        android:backgroundTint="#0F89CF"
        android:text="@string/viewExercises_button_addExercise"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_startWorkout"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.15" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="580sp"
        android:layout_marginTop="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        <!-- Outer vertical container for linearLayouts inside of scrollable container -->
        <LinearLayout
            android:layout_width="380sp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:id="@+id/viewExercise0"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="#990F89CF"
                android:layout_marginBottom="10px">
                <TextView
                    android:id="@+id/viewExerciseTextType0"
                    android:layout_width="80sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/viewExerciseText0"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/viewCheckBox0"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
`            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewExercise1"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="#80808080"
                android:layout_marginBottom="10px">
                <TextView
                    android:id="@+id/viewExerciseTextType1"
                    android:layout_width="80sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/viewExerciseText1"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/viewCheckBox1"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewExercise2"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="#990F89CF"
                android:layout_marginBottom="10px">
                <TextView
                    android:id="@+id/viewExerciseTextType2"
                    android:layout_width="80sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/viewExerciseText2"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/viewCheckBox2"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewExercise3"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="#80808080"
                android:layout_marginBottom="10px">
                <TextView
                    android:id="@+id/viewExerciseTextType3"
                    android:layout_width="80sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/viewExerciseText3"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/viewCheckBox3"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewExercise4"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="#990F89CF"
                android:layout_marginBottom="10px">
                <TextView
                    android:id="@+id/viewExerciseTextType4"
                    android:layout_width="80sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/viewExerciseText4"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/viewCheckBox4"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewExercise5"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="#80808080"
                android:layout_marginBottom="10px">
                <TextView
                    android:id="@+id/viewExerciseTextType5"
                    android:layout_width="80sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/viewExerciseText5"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/viewCheckBox5"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewExercise6"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="#990F89CF"
                android:layout_marginBottom="10px">
                <TextView
                    android:id="@+id/viewExerciseTextType6"
                    android:layout_width="80sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/viewExerciseText6"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/viewCheckBox6"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewExercise7"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="#80808080"
                android:layout_marginBottom="10px">
                <TextView
                    android:id="@+id/viewExerciseTextType7"
                    android:layout_width="80sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/viewExerciseText7"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/viewCheckBox7"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewExercise8"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="#990F89CF"
                android:layout_marginBottom="10px">
                <TextView
                    android:id="@+id/viewExerciseTextType8"
                    android:layout_width="80sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/viewExerciseText8"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/viewCheckBox8"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewExercise9"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="#80808080"
                android:layout_marginBottom="10px">
                <TextView
                    android:id="@+id/viewExerciseTextType9"
                    android:layout_width="80sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/viewExerciseText9"
                    android:layout_width="200sp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/viewCheckBox9"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>